@@ -309,7 +309,7 @@ void LensView::OnCategoryAdded(Category const& category)
   counts_[group] = 0;
 
   ResultView* grid;
-  
+
   if (renderer_name == "tile-horizontal")
   {
     grid = new ResultViewGrid(NUX_TRACKER_LOCATION);
@@ -317,12 +317,12 @@ void LensView::OnCategoryAdded(Category const& category)
     static_cast<ResultViewGrid*> (grid)->horizontal_spacing = CARD_VIEW_GAP_HORIZ;
     static_cast<ResultViewGrid*> (grid)->vertical_spacing = CARD_VIEW_GAP_VERT;
   }
-  else if (renderer_name == "flow")
+  else if (renderer_name == "flow" && nux::GetWindowThread()->GetGraphicsEngine().UsingGLSLCodePath())
   {
     grid = new CoverflowResultView(NUX_TRACKER_LOCATION);
     grid->SetModelRenderer(new ResultRendererTile(NUX_TRACKER_LOCATION));
     group->SetHeaderCountVisible(false);
-  } 
+  }
   else
   {
     grid = new ResultViewGrid(NUX_TRACKER_LOCATION);
